clusters/home/mail/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: mail
  name: mail
  namespace: mail
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: mail
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mail
    spec:
      containers:
        - name: mail
          image: container-registry.k8s.home.blrobinson.uk/docker-mail:latest
          ports:
            - name: smtpa
              containerPort: 25
              protocol: TCP
            - name: smtpb
              containerPort: 587
              protocol: TCP
            - name: smtpc
              containerPort: 465
              protocol: TCP
            - name: imap
              containerPort: 993
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: mail-dovecot
              mountPath: /var/dovecot
            - name: mail-postfix
              mountPath: /var/spool/postfix
            - name: mail-cert
              mountPath: /etc/cert
              readOnly: true
      volumes:
        - name: mail-dovecot
          nfs:
            server: 10.0.0.11 # TODO MAKE DNS?
            path: /mnt/mail-dovecot
        - name: mail-postfix
          nfs:
            server: 10.0.0.11 # TODO MAKE DNS?
            path: /mnt/mail-postfix
        - name: mail-cert
          secret:
            secretName: mail-cert
