clusters/home/mail/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: webmail
spec:
  hostnames:
  - webmail.blrobinson.uk
  parentRefs:
  - name: nginx-ingress
    namespace: ingress
    sectionName: https
  rules:
  - backendRefs:
    - name: mailu-front
      port: 80
